[package]
name = "unblock-it"
version = "1.0.0"
authors = ["Vladimir Markelov <vmatroskin@gmail.com>"]
edition = "2018"
keywords = ["puzzle", "game", "2d"]
license = "MIT"
description = "Unblocked is a puzzle game inspired by Flipull"
readme = "README.md"
repository = "https://github.com/VladimirMarkelov/unblocked"
categories = ["games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tetra = "0.2"
dirs = "2.0"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0.84"
chrono = "0.4"
bincode = "1.1.4"

[target.'cfg(windows)'.build-dependencies]
windres = "0.2"
