[package]
name = "unblock-it"
version = "1.1.0"
authors = ["Vladimir Markelov <vmatroskin@gmail.com>"]
edition = "2021"
keywords = ["puzzle", "game", "2d"]
license = "MIT"
description = "Unblocked is a puzzle game inspired by Flipull"
readme = "README.md"
repository = "https://github.com/VladimirMarkelov/unblocked"
categories = ["games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tetra = { version = "0.7", default-features = false, features = ["font_ttf", "texture_png"] }
dirs = "2.0"
toml = "^0.4"
serde = "1"
serde_derive = "1"
chrono = "^0.4"
bincode = "1"

[target.'cfg(windows)'.build-dependencies]
windres = "0.2"
